tdf#95220: Check if DrawingLayer is not nullptr

bool ScDocShell::isTiledRendering() const crashed without this check

Change-Id: Idb7ace05eb1aa37cbc3d956503c046b0e9b9d0e5